--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,42 +2,50 @@
 
 
 ## Loading and preprocessing the data
-Data contains many "NA" values, for some days all data points are "NA"s
-clean up white space also
+Data contains many "NA" values, for some days all data points are "NA"s  
+the intervals are five minute time intervals spaning an entire day.  They are coded "hhmm", so for example  1020 is 10:20am and 1835 is 18:35 in a 24 hour clock or 6:35 pm
 ```{r}
 library(knitr)
 rawData <- data.frame(read.csv("activity.csv"))
+#data frame with no NAs, this will leave some days with no values
 DataNoNAs <-rawData[complete.cases(rawData),]
 ```
 
 
 ## What is mean total number of steps taken per day?
-The "NA" values are ignored for this calcualtion, Days with "NA"'s for all data points for  that day are reported as 0 steps per day, and average and median as 0 also.
+The assignment states the "NA" values can be ignored for this calcualtion, and this is what was done.  Days with "NA"'s for all data points for that day are reported as 0 steps per day, and teh average and median as 0 also.
 
 
 ```{r} 
 
 #split(rawData,list(rawData$date))
-sumPerDay <- sapply(split(DataNoNAs,list(DataNoNAs$date)),function(x) sum(x$steps,na.rm=TRUE) )
-plot(sumPerDay,type="h")
-mean(sumPerDay)
-median(sumPerDay)
+sumPerDay <- sapply(split(rawData,list(rawData$date)),function(x) sum(x$steps,na.rm=TRUE) )
+hist(sumPerDay,breaks=30,xlab="Total Steps Per day",main="Histogram: Number of Steps per Day, 2012-10-01 through 2012-11-30" )
+meanPerDay <- mean(sumPerDay)
+medianPerDay <- median(sumPerDay)
+
 ```
-
-
+### The mean total number of steps per day is `r meanPerDay `
+### The median total number of steps per day is `r medianPerDay `
 
 ## What is the average daily activity pattern?
 
 
 
 ```{r}
-meanPerInterval <- sapply(split(DataNoNAs,list(DataNoNAs$interval)),function(x) mean(x$steps,na.rm=TRUE) )
-colnames(meanPerInterval) <- c("mean of 5min intervals")
+#split data by interval and calculate means, remove NAs
+meanPerInterval <- sapply(split(rawData,list(rawData$interval)),function(x) mean(x$steps,na.rm=TRUE) )
+#extract column names for graph
+xLabels <- names(meanPerInterval)
 
 #Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
-
-plot(meanPerInterval,type="l")
+#plot data
+plot(meanPerInterval,type="l",main="Mean Number of Steps per Interval",xlab="Interval",ylab="Mean Number of Steps", xaxt="n")
+#do calculations for x axis
+xLabIndx = seq(1,288,by=10)
+#add x axis labels 
+axis(at=xLabIndx,side=1,labels=xLabels[xLabIndx],las=2)
 
 #Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
@@ -45,10 +53,10 @@ plot(meanPerInterval,type="l")
 max(meanPerInterval)
 #max doesn't return which interval, so using sort
 sort(meanPerInterval,decreasing=TRUE)[1]
-#sapply(split(DataNoNAs,list(DataNoNAs$date)),function(x) mean(x$steps,na.rm=TRUE) )
+
 ```
 
-
+### The 5-minute interval that on average has the maximum number of steps is `r names(sort(meanPerInterval,decreasing=TRUE)[1]) ` and the number of average steps for this interval is `r sort(meanPerInterval,decreasing=TRUE)[1] ` 
 
 
 
@@ -58,10 +66,11 @@ Calculate and report the total number of missing values in the dataset (i.e. the
 
 ```{r}
 
+#check to see whre the NAs are
 sum(is.na(rawData$steps))
 sum(is.na(rawData$date))
 sum(is.na(rawData$interval))
-
+#they are only in the setps data
 
 
 ```
@@ -75,43 +84,62 @@ Create a new dataset that is equal to the original dataset but with the missing 
 
 ```{r}
 
+#Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+
 #create vector of median values for intervals
 medianPerInterval <- sapply(split(DataNoNAs,list(DataNoNAs$interval)),function(x) median(x$steps,na.rm=TRUE) )
-#replace the "NA"'s
+#replace the "NA"'s, first copy rawData
 replaceNAs.df <- rawData
+#mkake index of NAs
 indx <- which(is.na(replaceNAs.df$steps==TRUE))
+#using index, replase NAs with median values
 for (i in 1:length(indx) ) {
 replaceNAs.df[indx[i],1]  = medianPerInterval[[as.character(replaceNAs.df[indx[i],3])]]
 }
 sumPerDay.ReplaceNAs <- sapply(split(replaceNAs.df,list(replaceNAs.df$date)),function(x) sum(x$steps,na.rm=TRUE) )
-plot(sumPerDay.ReplaceNAs,type="h")
-mean(sumPerDay.ReplaceNAs)
-median(sumPerDay.ReplaceNAs)
+hist(sumPerDay.ReplaceNAs,breaks=30,xlab="Total Steps Per day",main="Histogram: Number of Steps per Day, 2012-10-01 through 2012-11-30" )
+meanPerDay.ReplaceNAs <- mean(sumPerDay.ReplaceNAs)
+medianPerDay.ReplaceNAs <- median(sumPerDay.ReplaceNAs)
 ```
 
+- The mean total number of steps per day after replacing NAs is `r meanPerDay.ReplaceNAs ` , without repalcing NAs the mean is `r meanPerDay `  
+- The median total number of steps per day after replacing NAs is `r medianPerDay.ReplaceNAs ` , without replacing NAs the medain is `r medianPerDay `.  
 
-Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+### Imputing values for NAs by this method has an effect on the mean but not the median for this data set
+
+
 
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
 ```{r}
-weekends <- subset(replaceNAs.df, weekdays(as.Date(replaceNAs.df$date)) == "Sunday" | weekdays(as.Date(replaceNAs.df$date)) == "Saturday")
 
-weekdays <- subset(replaceNAs.df, weekdays(as.Date(replaceNAs.df$date)) != "Sunday" & weekdays(as.Date(replaceNAs.df$date)) != "Saturday")
+#For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
 
-meanWeekend <- sapply(split(weekends,list(weekends$interval)),function(x) mean(x$steps,na.rm=TRUE) )
-meanWeekday <- sapply(split(weekdays,list(weekdays$interval)),function(x) mean(x$steps,na.rm=TRUE) )
-plot(meanWeekend,type="l")
-plot(meanWeekday,type="l")
-weekends <- subset(DataNoNAs, weekdays(as.Date(DataNoNAs$date)) == "Sunday" | weekdays(as.Date(DataNoNAs$date)) == "Saturday")
+#Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+#Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was creating using simulated data:
+library(ggplot2)
+library(Hmisc)
+#add weekend/weekday factor
+replaceNAs.df$weekend <- weekdays(as.Date(replaceNAs.df$date)) %in% c("Sunday","Saturday")
+g <-ggplot(replaceNAs.df,aes(interval,steps))
+g  + facet_grid(. ~ weekend) +stat_summary(fun.data = "mean_cl_boot", colour = "red")
+#meanPerInterval.replaceNAs <- sapply(split(replaceNAs.df,list(replaceNAs.df$interval)),function(x) mean(x$steps,na.rm=TRUE) )
 
-weekdays <- subset(DataNoNAs, weekdays(as.Date(DataNoNAs$date)) != "Sunday" & weekdays(as.Date(r$date)) != "Saturday")
+#weekdays <- subset(replaceNAs.df, weekdays(as.Date(replaceNAs.df$date)) != "Sunday" & weekdays(as.Date(replaceNAs.df$date)) != "Saturday")
 
-meanWeekend <- sapply(split(weekends,list(weekends$interval)),function(x) mean(x$steps,na.rm=TRUE) )
-meanWeekday <- sapply(split(weekdays,list(weekdays$interval)),function(x) mean(x$steps,na.rm=TRUE) )
-plot(meanWeekend,type="l")
-plot(meanWeekday,type="l")
+
+#plot(meanWeekday,type="l")
+#weekends <- subset(DataNoNAs, weekdays(as.Date(DataNoNAs$date)) == "Sunday" | weekdays(as.Date(DataNoNAs$date)) == "Saturday")
+
+#weekdays <- subset(DataNoNAs, weekdays(as.Date(DataNoNAs$date)) != "Sunday" & weekdays(as.Date(r$date)) != "Saturday")
+
+#meanWeekend <- sapply(split(weekends,list(weekends$interval)),function(x) mean(x$steps,na.rm=TRUE) )
+#meanWeekday <- sapply(split(weekdays,list(weekdays$interval)),function(x) mean(x$steps,na.rm=TRUE) )
+#plot(meanWeekend,type="l")
+#plot(meanWeekday,type="l")
 
 
 ```
